fix: makes tooltip always visible

--- a/frontend/styles/layouts/l-profile-actor.scss
+++ b/frontend/styles/layouts/l-profile-actor.scss
@@ -98,6 +98,7 @@
 
     .js-top-municipalities-map {
       height: 400px;
+      overflow: hidden;
 
       svg {
         margin-left: 50px;
